tests/fsharp/typecheck/sigs/neg29.bsl

neg29.fs(5,19,6,16): parse error FS0010: Incomplete structured construct at or before this point in type name. Expected '>' or other token.

neg29.fs(6,19,6,20): parse error FS0010: Unexpected symbol '(' in expression

neg29.fs(6,18,6,19): parse error FS3156: Unexpected token '>' or incomplete expression

neg29.fs(9,1,9,1): parse error FS0010: Incomplete structured construct at or before this point in implementation file
